<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.trippntechnology.tntmusicplayer.dialogs.edittagdialog.EditTagDialogViewModel" />

        <variable
            name="audioFile"
            type="com.trippntechnology.tntmusicplayer.objects.AudioFile" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/dialog_shape"
        android:elevation="24dp">

        <TextView
            android:id="@+id/editTagDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/edit_tags"
            android:textColor="@color/primaryTextDark"
            android:textSize="@dimen/alert_dialog_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/editTagCover"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/albumcover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTagFilePath"
            app:setImage="@{audioFile.cover}" />

        <TextView
            android:id="@+id/editTagFilePath"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@{audioFile.filePath}"
            android:textColor="@color/disabledTextDark"
            app:layout_constraintStart_toEndOf="@+id/editTagFilePathLabel"
            app:layout_constraintTop_toBottomOf="@+id/editTagDialogTitle" />

        <TextView
            android:id="@+id/editTagFilePathLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/filepathLabel"
            android:textColor="@color/primaryTextDark"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTagDialogTitle" />

        <TextView
            android:id="@+id/editTagTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/titleLabel"
            android:textColor="@color/primaryTextDark"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTagCover" />

        <EditText
            android:id="@+id/editTagTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:text="@{audioFile.title}"
            android:textColor="@color/helperTextDark"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/editTagTitleLabel"
            app:layout_constraintStart_toEndOf="@+id/editTagTitleLabel"
            app:layout_constraintTop_toTopOf="@+id/editTagTitleLabel"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/editTagAlbumLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/albumLabel"
            android:textColor="@color/primaryTextDark"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTagTitleLabel" />

        <EditText
            android:id="@+id/editTagAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/album"
            android:inputType="textPersonName"
            android:text="@{audioFile.album}"
            android:textColor="@color/helperTextDark"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/editTagAlbumLabel"
            app:layout_constraintStart_toEndOf="@+id/editTagAlbumLabel"
            app:layout_constraintTop_toTopOf="@+id/editTagAlbumLabel"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/editTagArtistLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/artistLabel"
            android:textColor="@color/primaryTextDark"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTagAlbumLabel" />

        <EditText
            android:id="@+id/editTagArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/artist"
            android:inputType="textPersonName"
            android:text="@{audioFile.artist}"
            android:textColor="@color/helperTextDark"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/editTagArtistLabel"
            app:layout_constraintStart_toEndOf="@+id/editTagArtistLabel"
            app:layout_constraintTop_toTopOf="@+id/editTagArtistLabel"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/editTagYearLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/yearLabel"
            android:textColor="@color/primaryTextDark"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTagArtistLabel" />

        <EditText
            android:id="@+id/editTagYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/year"
            android:inputType="textPersonName"
            android:text="@{audioFile.year}"
            android:textColor="@color/helperTextDark"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/editTagYearLabel"
            app:layout_constraintStart_toEndOf="@+id/editTagYearLabel"
            app:layout_constraintTop_toTopOf="@+id/editTagYearLabel"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/editTagTrackLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/track"
            android:textColor="@color/primaryTextDark"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTagYearLabel" />

        <EditText
            android:id="@+id/editTagTrack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/track"
            android:inputType="textPersonName"
            android:text="@{audioFile.track}"
            android:textColor="@color/helperTextDark"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/editTagTrackLabel"
            app:layout_constraintStart_toEndOf="@+id/editTagTrackLabel"
            app:layout_constraintTop_toTopOf="@+id/editTagTrackLabel"
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:onClick="@{()->viewModel.saveTags(editTagTitle.getText().toString(),editTagAlbum.getText().toString(),editTagArtist.getText().toString(),editTagYear.getText().toString(),editTagTrack.getText().toString(),editTagCover,audioFile)}"
            android:text="@string/save_tags"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTagTrack" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:onClick="@{()->viewModel.cancel()}"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintTop_toTopOf="@+id/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>